--- a/home.html
+++ b/home.html
@@ -320,16 +320,26 @@
 
       <section class="big">
         <div class="big__img"></div>
-        <div class="big__detail">
-          <div class="big__title">
-            Energy of a start-up combined with 30 years of experience.
-          </div>
-          <div class="big__btn">
-            <a class="btn btn--white" href="#">See Job Vacancies</a>
+        <div class="container">
+          <div class="big__inner">
+            <div class="big__placeholder"></div>
+            <div class="big__detail">
+              <div class="big__title">
+                Energy of a start-up combined with 30 years of experience.
+              </div>
+              <div class="big__btn">
+                <a class="btn btn--white" href="#">See Job Vacancies</a>
+              </div>
+            </div>
           </div>
         </div>
       </section>
-      
+
+      <div class="sections">
+        <section>
+          <div class="container"></div>
+        </section>
+      </div>
     </main>
   </body>
 </html>
